# slp-replay-converter-web

./: .gitmodules  README.md  pyproject.toml
src/slp_replay_converter_web/: __about__.py
src/slp_replay_converter_web/web/: manager.py  web.py
src/slp_replay_converter_web/web/static/: styles.css
src/slp_replay_converter_web/web/templates/: index.html
tests/: __init__.py
